@@ -40,6 +40,5 @@ m4_include([multiply.at])	# 14.8.25 MULTIPLY statement
 # Other tests
 m4_include([definition.at])
 m4_include([extension.at])
-m4_include([binary.at])
 m4_include([entry.at])
 m4_include([misc.at])
